# layers

./: Makefile  sam.yml
.github/workflows/: deploy.yml
layers/base/: pyproject.toml
layers/bs4/: pyproject.toml
layers/feedparser/: pyproject.toml
layers/jinja/: pyproject.toml
