[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
botocore = "1.23.5"
boto3 = "1.20.5"
boto3-stubs = {version = "1.20.5", extras = ["cloudfront", "dynamodb", "glue", "s3", "sqs", "ssm"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
